Fixed CSS for social media icons
For responsiveness (reflow) of page.

--- a/css/style-sm.css
+++ b/css/style-sm.css
@@ -64,6 +64,8 @@ Contact
     
     #section-contact_media-icons figure {
         position: relative;
+        
+        margin: 0;
         width: 100%;
     }
     
