--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,9 @@ Contact
 #section-contact_media-icons {
     display: flex;
     flex-wrap: wrap;
+    position: relative;
     
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -207,7 +209,6 @@ Contact
 }
 
 #section-contact_media-icons figure {
-    margin: 0;
     border: 0.2em solid black;
 } 
 
