--- a/css/style-md.css
+++ b/css/style-md.css
@@ -64,10 +64,13 @@ Contact
 
 */
     #section-contact_media-icons {
-        max-width: 700px;
         margin-left: auto;
         margin-right: auto;
     }
+    
+    #section-contact_media-icons figure {
+        margin: 0.4em;
+    } 
     
     #section-contact_media-icons figure > figcaption {
         padding: 0.8em;
