--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@ About
     border: 0.20em solid black;
 }
 
+#section-about_description {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /*
 
